# gnome-extension-milkdrop-viz

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PRD.md  QUESTIONS.md  README.md  check_sdl_fbo2.ppm  fix.patch  fix.py  meson.build  meson_options.txt  no_audio.ppm  suksma_sdl.ppm  test_blank.sh  test_sdl.ppm
.cursor/plans/: testes_do_pipeline_de_render.plan.md
.cursor/skills/gnome-shell-extension-dev/: SKILL.md
.cursor/skills/gnome-shell-extension-dev/references/: gnome-extension-rules.md
.github/: copilot-instructions.md
artifacts/baseline/: on_render_journal_4h_summary.txt
artifacts/gpu_profile/gpu_profile_20260412T011127Z/: 00_header.txt  SUMMARY.md  milkdrop_lines.txt
artifacts/nested-validation/: summary_20260412T010817Z.txt
data/: org.gnome.shell.extensions.milkdrop.gschema.xml
docs/: SECURITY.md
docs/research/: 01-overview-and-product-constraints.md  02-system-architecture.md  03-gnome-shell-and-mutter-context.md  04-gnome-shell-extension-development.md  05-gnome-hig-input-and-accessibility.md  06-gtk4-glarea-projectm-integration.md  07-opengl-glsl-and-rendering-principles.md  08-pipewire-audio-ring-buffer-and-realtime.md  09-control-socket-settings-and-state.md  10-build-packaging-and-distribution.md  11-testing-observability-and-performance.md  12-risk-register-and-decision-log.md  13-projectm-integration-compliance.md  14-fbo-gnome-shell-guidelines.md  14-renderer-sdl2-offscreen-architecture.md  15-egl-dmabuf-cross-context-texture-sharing.md  16-meta-wayland-client-lifecycle.md  17-gnome-shell-47-50-extension-api-changes.md
extension/milkdrop@mauriciobc.github.io/: constants.js  controlClient.js  extension.js  managedWindow.js  metadata.json  mprisWatcher.js  pausePolicy.js  prefs.js
logs/: pipeline-evidence-2026-04-04.txt
reports/: compliance_frontend_sdl_rust_audit.txt
src/: app.h  audio.c  audio.h  audio_recovery.c  audio_recovery.h  control.c  control.h  main.c  meson.build  offscreen_renderer.c  offscreen_renderer.h  presets.c  presets.h  quarantine.c  quarantine.h  renderer.c  renderer.h  startup_gate.c  startup_gate.h
subprojects/: projectm-eval.wrap
tests/: BLUR_VALIDATION_README.md  blur_test_playlist.txt  compare_gtk_sdl_projectm_snapshots.sh  compare_gtk_vs_sdl_baselines.sh  compare_projectm_snapshots.py  meson.build  pick_random_presets.py  poc_sdl_gtk_copy_present.c  preset_render_sample.sh  reference_renderer.c  run_milkdrop_verbose_local_presets.sh  sdl_preset_snapshot.c  test_audio_alignment.c  test_audio_recovery.c  test_backends.c  test_blur_validation.sh  test_control_protocol.c  test_control_state_flow.c  test_cream_preset_dir_scan.c  test_gdk_glcontext_projectm.c  test_gtk_glarea_fbo.c  test_gtk_glarea_projectm.c  test_managed_window.js  test_offscreen_renderer.c  test_pause_policy.c  test_preset_quarantine.c  test_presets.c  test_presets_edge_cases.c  test_render_pipeline.c  test_ring_buffer.c  test_startup_activation.c  test_startup_async_gate.c  test_state_persistence.c  test_tick_state_machine.c  test_title_parser.js  validate_scaffold.py
tests/baselines/: README.txt
tests/baselines/sdl_seed42_f48_w320h240/: MANIFEST.txt  baseline_01.ppm  baseline_02.ppm  baseline_03.ppm  baseline_04.ppm  baseline_05.ppm
tools/: analyze_on_render_journal.py  check_ppm_black.py  collect_issue_evidence.sh  compare_diff.py  create_sdl_snapshot_baselines.sh  debug_nested.sh  dock_matrix.sh  fbo_patch.patch  install.sh  nested_devkit.sh  profile_gpu_milkdrop.sh  projectm-hlsl-array-fix.patch  rebuild_projectm.sh  reload.sh  run_controlled_projectm_fbo_test.sh  test_fbo_blit.patch  test_socket.py  uninstall.sh
