option(
  'projectm',
  type: 'feature',
  value: 'auto',
  description: 'Enable libprojectM integration',
)

option(
  'pipewire',
  type: 'feature',
  value: 'auto',
  description: 'Enable PipeWire audio capture backend',
)

option(
  'shell-integration-tests',
  type: 'boolean',
  value: false,
  description: 'Register nested GNOME Shell integration test (requires extension and binary installed under ~/.local)',
)

# Kept for stale build dirs: Meson reapplies saved options; without this key, --reconfigure errors.
option(
  'bundle_projectm_build_dir',
  type: 'string',
  value: '',
  description: 'Deprecated (ignored): legacy option so old build trees can reconfigure.',
)